--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
+                    
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
@@ -174,16 +171,16 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="https://www.facebook.com/naveen.balachandran.fun"></i></a>
+                                <a href="https://www.facebook.com/naveen.balachandran.fun" class="btn-social btn-outline"><i class=""></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="https://www.google.com/+naveenbonline"></i></a>
+                                <a href="https://www.google.com/+naveenbonline" class="btn-social btn-outline"><i class=""></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="https://www.twitter.com/thenaveenb"></i></a>
+                                <a href="https://www.twitter.com/thenaveenb" class="btn-social btn-outline"><i class=""></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="I am not on linkedin"></i></a>
+                                <a href="I am not on linkedin" class="btn-social btn-outline"><i class=""></i></a>
                             </li>
                             
                         </ul>
