--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/naveen.balachandran.fun" class="btn-social btn-outline"><i class=""></i></a>
+                                <a href="https://www.facebook.com/naveen.balachandran.fun" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/+naveenbonline" class="btn-social btn-outline"><i class=""></i></a>
+                                <a href="https://www.google.com/+naveenbonline" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.twitter.com/thenaveenb" class="btn-social btn-outline"><i class=""></i></a>
+                                <a href="https://www.twitter.com/thenaveenb" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="I am not on linkedin" class="btn-social btn-outline"><i class=""></i></a>
+                                <a href="I am not on linkedin" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             
                         </ul>
