--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 My Home<br>Earth</p>
+                        <p>My Home<br>Earth</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/naveen.balachandran.fun" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.google.com/+naveenbonline" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
