--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                 <a href="https://www.facebook.com/naveen.balachandran.fun" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.google.com/+naveenbonline" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
